add semantic ui for visuals, create simple query button

--- a/src/server/views/layout.hbs
+++ b/src/server/views/layout.hbs
@@ -21,6 +21,9 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700,800" rel="stylesheet">
 
+    <!-- Semantic UI Style -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"></link>
+
 {{#if htmlWebpackPlugin.options.creatingBuild}}
     <!-- CSS Files -->
   {{#each htmlWebpackPlugin.files.css}}
