--- a/src/client/views/Shell/_style.scss
+++ b/src/client/views/Shell/_style.scss
@@ -7,10 +7,8 @@
 .shell{
   // Positioning mixin. Better have a positioned element than regretting it later...
   @include position(relative, block, 100%);
-  float : left;
   padding : $grid;
 
-  // Use proto to design prototype component with random background-color & opacity
-  // you will see this as yellow
-  @include proto(2, 0.2);
+  max-width : $breakpoint-tablet10;
+  margin : 0 auto;
 }
