--- a/src/client/views/features/Home/_style.scss
+++ b/src/client/views/features/Home/_style.scss
@@ -4,8 +4,7 @@
   @include position(relative, block, 100%);
   float : left;
   margin : $grid 0 0;
-  padding : $grid;
+  padding : $grid * 2;
 
-  // you will see this as transparent-blue
-  @include proto(1, 0.3);
+  background-color : $white-98;
 }
